servlet reads arbitrary bytes before sending the only response it can make.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">RelayerSMS</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Accepting JSON requests at port:8080</string>
     <string name="action_settings">Settings</string>
 
 </resources>
